# AnkiLab

./: .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  prompts.py  settings.py
core/: __init__.py  api.py  parser.py
ui/: __init__.py  app.py  theme.py
ui/components/: __init__.py  export_dialog.py
ui/tabs/: __init__.py  generate_tab.py  review_tab.py
utils/: __init__.py  export.py  validators.py
