[project]
name = "anki-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "rubiali-windows",email = "gabrielrubiali@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=2.11.0,<3.0.0)",
    "genanki (>=0.13.1,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
